fixed messaging on mobile w/ new diesgn

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,15 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    -webkit-text-fill-color: black !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+    transition: background-color 5000s ease-in-out 0s;
+  }
 }
 
 /* Custom scrollbar */
